--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ DB_USER=avito_user
 DB_PASSWORD=avito_pass
 DB_NAME=avito
 
-DB_CONNECTION_RETRIES=5 # 5 attempts to connect
-DB_CONNECTION_DELAY=3   # 3 seconds between attempts 
+DB_CONNECTION_RETRIES=5
+DB_CONNECTION_DELAY=3  
