--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
       - ./db/init:/docker-entrypoint-initdb.d
+      - ./db/config/postgresql.conf:/etc/postgresql/postgresql.conf
+    command: ["postgres"]
 
   api:
     build: .
@@ -21,14 +23,29 @@ services:
     restart: always
     depends_on:
       - db
+      - redis
     environment:
       DB_HOST: db
       DB_PORT: 5432
       DB_USER: avito_user
       DB_PASSWORD: avito_pass
       DB_NAME: avito
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      REDIS_PASSWORD: avito_pass
     ports:
       - "8080:8080"
 
+  redis:
+    image: redis:latest
+    container_name: redis_container
+    restart: always
+    ports:
+      - "6379:6379"
+    command: redis-server --appendonly yes --requirepass avito_pass
+    volumes:
+      - redis_data:/data
+
 volumes:
   pg_data:
+  redis_data:
